Manifests/coffee-nordport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-website-service
spec:
  type: NodePort
  selector:
    app: coffee-website
  ports:
    - name: tcp
      port: 8081
      targetPort: 8081
