Manifests/coffee-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-website-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: coffee-website
